--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@dnd-kit/core": "^6.0.8",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "18.2.4",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "firebase": "^9.22.1",
     "next": "13.4.4",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "typescript": "5.1.3"
