--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@types/react": "18.2.8",
     "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "18.2.4",
-    "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "firebase": "^9.22.1",
     "next": "13.4.4",
@@ -24,12 +23,19 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
-    "typescript": "5.1.3"
+    "typescript-eslint": "^0.0.1-alpha.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2"
+    "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.3"
   }
 }
